commserver.ua.server - remove direct references - Add Nuget packages  - added packages and removed compilation errors. Issue #: 4863
Issue #: 4863

--- a/Tests/ADI on cas_xptest_001/ReadMe.html
+++ b/Tests/ADI on cas_xptest_001/ReadMe.html
@@ -7,7 +7,7 @@
     <p>This project provides configuration required to expose OPC UA ADI server on the Internet using CommServerUA Rel 1.00.32.</p>
     <p>To install:
     <ol>
-        <li>Install professional licenses for CommServer nad CommServer - wrapper constrain must be allowed.</li>
+        <li>Install professional licenses for CommServer and CommServer - wrapper constrain must be allowed.</li>
         <li>Copy configuration file <b>embeddedexample/adisampleconfiguration/defaultconfig.xml</b>  to CommServer ApplicationData C:\ProgramData\CAS\CAS.CommServer</li>
         <li>Copy the <b>EmbeddedExample</b> folder to the C:\ProgramData\CAS\CAS.CommServerUA folder</li>
         <li>Copy <b>CAS.CommServerUA.exe.config</b> to the C:\Program Files (x86)\CAS\CommServerUA</li>
